# fastcmp

./: Cargo.toml  README.md  appveyor.yml  build.rs  index.html  search-index.js
benches/: main.rs
fastcmp/: index.html  sidebar-items.js  trait.Compare.html
implementors/fastcmp/: trait.Compare.js
src/: lib.rs
src/fastcmp/: lib.rs.html
tests/: main.rs
