[package]
name = "fastcmp"
version = "0.1.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
license = "MIT"
readme = "README.md"
keywords = ["memcmp", "cmp", "compare", "fast", "array"]
repository = "https://github.com/saschagrunert/fastcmp"
homepage = "https://github.com/saschagrunert/fastcmp"
documentation = "https://docs.rs/fastcmp"
description = "A fast byte slice comparison library"
build = "build.rs"

[features]
simd_support = ["simd"]

[dependencies.simd]
optional = true
version = "0"

[dev-dependencies]
rand = "0"
