[package]
name = "fastcmp"
version = "1.0.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
license = "MIT"
readme = "README.md"
keywords = ["memcmp", "cmp", "compare", "fast", "array"]
repository = "https://github.com/saschagrunert/fastcmp"
homepage = "https://github.com/saschagrunert/fastcmp"
documentation = "https://docs.rs/fastcmp"
description = "A fast byte slice comparison library"
build = "build.rs"

[dev-dependencies]
rand = "0"
